0.6.0/_sources/autoapi/hklpy2/utils/index.rst.txt
utils
=====

.. py:module:: hklpy2.utils

.. autoapi-nested-parse::

   Import: ``hklpy2.utils``

   General-purpose utilities for |hklpy2|.

   .. rubric: Functions
   .. autosummary::

       ~axes_to_dict
       ~benchmark
       ~check_value_in_list
       ~compare_float_dicts
       ~convert_units
       ~distance_between_pos_tuples
       ~flatten_lists
       ~istype
       ~load_yaml
       ~load_yaml_file
       ~pick_closest_solution
       ~pick_first_solution
       ~roundoff
       ~unique_name
       ~validate_and_canonical_unit
       ~validate_not_parallel

   .. rubric: Symbols
   .. autosummary::

       ~DEFAULT_DIGITS
       ~DEFAULT_MOTOR_LABELS
       ~DEFAULT_START_KEY
       ~IDENTITY_MATRIX_3X3
       ~INTERNAL_ANGLE_UNITS
       ~INTERNAL_LENGTH_UNITS
       ~INTERNAL_XRAY_ENERGY_UNITS
       ~MISSING_HEADER_KEY_MSG
       ~PINT_ERRORS
       ~UREG






Module Contents
---------------

.. py:data:: DEFAULT_DIGITS
   :type:  int
   :value: 4


.. py:data:: DEFAULT_MOTOR_LABELS
   :type:  Sequence[str]
   :value: ['motors']


   Default labels applied to real-axis positioners.

.. py:data:: DEFAULT_START_KEY
   :type:  str
   :value: 'diffractometers'


.. py:data:: IDENTITY_MATRIX_3X3
   :type:  ~hklpy2.typing.Matrix3x3
   :value: [[1, 0, 0], [0, 1, 0], [0, 0, 1]]


   Identity matrix, 2-D, 3 rows, 3 columns.

.. py:data:: INTERNAL_ANGLE_UNITS
   :type:  str
   :value: 'degrees'


.. py:data:: INTERNAL_LENGTH_UNITS
   :type:  str
   :value: 'angstrom'


.. py:data:: INTERNAL_XRAY_ENERGY_UNITS
   :type:  str
   :value: 'keV'


.. py:data:: MISSING_HEADER_KEY_MSG
   :type:  str
   :value: "Configuration is missing '_header' key."


   Error message for missing _header key in configuration dicts.

.. py:data:: PINT_ERRORS

   Exception from pint that we are trapping here.

.. py:data:: UREG

.. py:function:: axes_to_dict(input: ~hklpy2.typing.AnyAxesType, names: list[str]) -> ~hklpy2.typing.AxesDict

   .. container:: import-path

      Import: ``hklpy2.utils.axes_to_dict``


   Convert any acceptable axes input to standard form (dict).

   User could provide input in several forms:

   * dict: ``{"h": 0, "k": 1, "l": -1}``
   * namedtuple: ``(h=0.0, k=1.0, l=-1.0)``
   * ordered list: ``[0, 1, -1]  (for h, k, l)``
   * ordered tuple: ``(0, 1, -1)  (for h, k, l)``

   PARAMETERS:

   input : AnyAxesType
       Positions, specified as dict, list, or tuple.
   names : [str]
       Expected names of the axes, in order expected by the solver.


.. py:function:: check_value_in_list(title, value, examples, blank_ok=False) -> None

   .. container:: import-path

      Import: ``hklpy2.utils.check_value_in_list``


   Raise ValueError exception if value is not in the list of examples.


.. py:function:: compare_float_dicts(a1, a2, tol=0.0001) -> bool

   .. container:: import-path

      Import: ``hklpy2.utils.compare_float_dicts``


   Compare two dictionaries.  Values are all floats.


.. py:function:: convert_units(value: float, old_units: str, new_units: str) -> float

   .. container:: import-path

      Import: ``hklpy2.utils.convert_units``


   Convert 'value' from old units to new.


.. py:function:: distance_between_pos_tuples(pos1: NamedTuple, pos2: NamedTuple) -> float

   .. container:: import-path

      Import: ``hklpy2.utils.distance_between_pos_tuples``


   Return the RMS distance between 'pos1' and 'pos2'.


.. py:function:: flatten_lists(xs: Sequence[Union[bytes, ~collections.abc.Iterable, str]]) -> ~hklpy2.typing.BlueskyPlanType

   .. container:: import-path

      Import: ``hklpy2.utils.flatten_lists``


   Convert nested lists into single list.

   https://stackoverflow.com/questions/2158395


.. py:function:: istype(value: Any, annotation: Type) -> bool

   .. container:: import-path

      Import: ``hklpy2.utils.istype``


   Check if 'value' matches the type 'annotation'.

   EXAMPLE::

       >>> istype({"a":1}, AxesDict)
       True


.. py:function:: load_yaml(text: str) -> Mapping

   .. container:: import-path

      Import: ``hklpy2.utils.load_yaml``


   Load YAML from text.


.. py:function:: load_yaml_file(file: Union[~pathlib.Path, str]) -> Mapping

   .. container:: import-path

      Import: ``hklpy2.utils.load_yaml_file``


   Return contents of a YAML file as a Python object.


.. py:function:: pick_closest_solution(position: NamedTuple, solutions: list[NamedTuple]) -> NamedTuple

   .. container:: import-path

      Import: ``hklpy2.utils.pick_closest_solution``


   Find the solution closest to the current real position.

   Used by :meth:`~hklpy2.diffract.DiffractometerBase.forward()` method to pick
   a solution from a list of possible solutions.  Assign to diffractometer's
   :attr:`~hklpy2.diffract.DiffractometerBase._forward_solution` method.

   PARAMETERS

   position tuple :
       Current position.
   solutions list[tuple] :
       List of positions.

   .. seealso::
       :attr:`~hklpy2.diffract.DiffractometerBase._forward_solution`,
       :func:`~hklpy2.utils.pick_first_solution`


.. py:function:: pick_first_solution(position: NamedTuple, solutions: list[NamedTuple]) -> NamedTuple

   .. container:: import-path

      Import: ``hklpy2.utils.pick_first_solution``


   Choose first solution from list.

   Used by :meth:`~hklpy2.diffract.DiffractometerBase.forward()` method to pick
   a solution from a list of possible solutions.  Assign to diffractometer's
   :attr:`~hklpy2.diffract.DiffractometerBase._forward_solution` method.

   PARAMETERS

   position tuple :
       Current position.  (Required for general case, not used here.)
   solutions list[tuple] :
       List of positions.

   .. seealso::
       :attr:`~hklpy2.diffract.DiffractometerBase._forward_solution`,
       :func:`~hklpy2.utils.pick_closest_solution`


.. py:function:: roundoff(value: float, digits=4) -> float

   .. container:: import-path

      Import: ``hklpy2.utils.roundoff``


   Round a number to specified precision.


.. py:function:: unique_name(prefix: str = '', length: int = 7) -> str

   .. container:: import-path

      Import: ``hklpy2.utils.unique_name``


   Short, unique name, first 7 (at most) characters of a unique, random uuid.


.. py:function:: validate_and_canonical_unit(value: str, target_units: str) -> str

   .. container:: import-path

      Import: ``hklpy2.utils.validate_and_canonical_unit``


   Validate that *value* is a unit convertible to *target_units*.

   Returns a canonical string representation of the unit (via UREG).
   Raises ValueError on failure.


.. py:function:: validate_not_parallel(hkl: Sequence[float], hkl2: Sequence[float], tol: float = 1e-06) -> None

   .. container:: import-path

      Import: ``hklpy2.utils.validate_not_parallel``


   Raise ValueError if two vectors are parallel or anti-parallel.

   :param hkl: First vector.
   :type hkl: sequence of float
   :param hkl2: Second vector.
   :type hkl2: sequence of float
   :param tol: Tolerance on the cross-product magnitude below which the vectors are
               considered parallel.
   :type tol: float

   :raises ValueError: If the cross product of *hkl* and *hkl2* has magnitude less than *tol*.


